Inicio - Ajustes Generales 4

--- a/app/src/main/res/layout/dialogo_configuracion.xml
+++ b/app/src/main/res/layout/dialogo_configuracion.xml
@@ -42,204 +42,12 @@
                 android:layout_height="wrap_content"
                 android:background="@color/FondoSecundario2"
                 android:paddingLeft="12dp"
+                android:paddingTop="2dp"
                 android:paddingRight="6dp"
+                android:paddingBottom="4dp"
                 android:text="Recordar Cuenta"
                 android:textColor="@color/Blanco"
                 android:textSize="18sp" />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="4dp"
-                android:background="@color/FondoSecundario2" />
-
-            <TextView
-                android:id="@+id/tituloEspacio"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:paddingLeft="10dp"
-                android:text="Almacenamiento"
-
-                android:textColor="@color/Blanco"
-                android:textSize="24sp"
-                android:textStyle="bold" />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="4dp"
-                android:layout_marginTop="5dp"
-                android:background="@color/FondoSecundario2" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/FondoSecundario2"
-                android:orientation="horizontal"
-                android:weightSum="2">
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1.7"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/tituloAlmacen1"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="left"
-                        android:paddingLeft="10dp"
-                        android:paddingTop="4dp"
-                        android:text="Fotografias en Galeria"
-                        android:textColor="@color/Blanco"
-                        android:textSize="18sp" />
-
-                    <TextView
-                        android:id="@+id/tituloEspacio1"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="left"
-                        android:paddingLeft="10dp"
-                        android:paddingTop="3dp"
-                        android:text="15.5 GB"
-                        android:textColor="@color/Blanco"
-                        android:textSize="15sp" />
-                </LinearLayout>
-
-                <ImageButton
-                    android:id="@+id/limpiar1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="50dp"
-                    android:layout_marginRight="4dp"
-                    android:layout_weight="0.3"
-                    android:background="@color/FondoSecundario2"
-                    android:src="@drawable/ic_borar"
-                    android:text="Limpiar"
-                    android:textColor="@color/Blanco" />
-            </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="4dp"
-                android:background="@color/FondoSecundario2" />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="4dp"
-                android:layout_marginTop="5dp"
-                android:background="@color/FondoSecundario2" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/FondoSecundario2"
-                android:orientation="horizontal"
-                android:weightSum="2">
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1.7"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/tituloAlmacen2"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="left"
-                        android:paddingLeft="10dp"
-                        android:paddingTop="4dp"
-                        android:text="PDF - Fichas Normales"
-                        android:textColor="@color/Blanco"
-                        android:textSize="18sp" />
-
-                    <TextView
-                        android:id="@+id/tituloEspacio2"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="left"
-                        android:paddingLeft="10dp"
-                        android:paddingTop="3dp"
-                        android:text="15.5 GB"
-                        android:textColor="@color/Blanco"
-                        android:textSize="15sp" />
-                </LinearLayout>
-
-                <ImageButton
-                    android:id="@+id/limpiar2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="50dp"
-                    android:layout_marginRight="4dp"
-                    android:layout_weight="0.3"
-                    android:background="@color/FondoSecundario2"
-                    android:src="@drawable/ic_borar"
-                    android:text="Limpiar"
-                    android:textColor="@color/Blanco" />
-            </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="4dp"
-                android:background="@color/FondoSecundario2" />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="4dp"
-                android:layout_marginTop="5dp"
-                android:background="@color/FondoSecundario2" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/FondoSecundario2"
-                android:orientation="horizontal"
-                android:weightSum="2">
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1.7"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/tituloAlmacen3"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="left"
-                        android:paddingLeft="10dp"
-                        android:paddingTop="4dp"
-                        android:text="PDF - Fichas Especiales"
-                        android:textColor="@color/Blanco"
-                        android:textSize="18sp" />
-
-                    <TextView
-                        android:id="@+id/tituloEspacio3"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="left"
-                        android:paddingLeft="10dp"
-                        android:paddingTop="3dp"
-                        android:text="15.5 GB"
-                        android:textColor="@color/Blanco"
-                        android:textSize="15sp" />
-                </LinearLayout>
-
-                <ImageButton
-                    android:id="@+id/limpiar3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="50dp"
-                    android:layout_marginRight="4dp"
-                    android:layout_weight="0.3"
-                    android:background="@color/FondoSecundario2"
-                    android:src="@drawable/ic_borar"
-                    android:text="Limpiar"
-                    android:textColor="@color/Blanco" />
-            </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="4dp"
-                android:background="@color/FondoSecundario2" />
 
             <TextView
                 android:id="@+id/tituloAyuda"
