--- a/app/src/main/res/layout/dialogo_editarperfil.xml
+++ b/app/src/main/res/layout/dialogo_editarperfil.xml
@@ -23,7 +23,7 @@
             android:textSize="24sp" />
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/textInputLayoutFirstName"
+            android:id="@+id/layoutNombrePerfil"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="12dp"
@@ -31,7 +31,8 @@
             android:layout_marginRight="12dp"
             android:hint="Nombre del Perfil"
             app:counterEnabled="true"
-            app:counterMaxLength="40">
+            app:counterMaxLength="40"
+            app:errorEnabled="true">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/nombrePerfilAux"
