--- a/app/src/main/res/layout/menu_inferior.xml
+++ b/app/src/main/res/layout/menu_inferior.xml
@@ -71,6 +71,7 @@
                 android:paddingBottom="10dp">
 
                 <ImageView
+                    android:id="@+id/icono_bloqueo"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_gravity="center_horizontal"
@@ -88,6 +89,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/layoutEliminar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="12dp"
@@ -95,7 +97,6 @@
             android:layout_marginRight="12dp"
             android:orientation="horizontal"
             android:weightSum="2">
-
 
             <LinearLayout
                 android:id="@+id/opc_eliminar"
