--- a/app/src/main/res/layout/fragment_servicios.xml
+++ b/app/src/main/res/layout/fragment_servicios.xml
@@ -36,12 +36,13 @@
             android:orientation="vertical">
 
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/layoutDescripcion"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Descripcion"
                 app:counterEnabled="true"
-                app:errorEnabled="true"
-                app:counterMaxLength="100">
+                app:counterMaxLength="100"
+                app:errorEnabled="true">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/descripcionServicio"
@@ -53,12 +54,14 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/layoutMonto"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:hint="Monto"
-                app:errorEnabled="true"
                 app:counterEnabled="true"
-                app:counterMaxLength="10">
+                app:counterMaxLength="10"
+                app:errorEnabled="true">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/montoServicio"
@@ -73,18 +76,18 @@
                 android:id="@+id/tituloEstadoServicio"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:paddingLeft="4dp"
                 android:text="Estado del Servicio:"
-                android:textSize="18dp"
                 android:textColor="@color/Blanco"
-                android:layout_marginTop="10dp"/>
+                android:textSize="18dp" />
 
             <RadioGroup
                 android:id="@+id/estado_servicio"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
                 android:layout_gravity="center_horizontal"
+                android:layout_marginTop="10dp"
                 android:gravity="center_horizontal"
                 android:orientation="horizontal">
 
@@ -98,7 +101,7 @@
 
                 <Space
                     android:layout_width="20dp"
-                    android:layout_height="match_parent"/>
+                    android:layout_height="match_parent" />
 
                 <RadioButton
                     android:id="@+id/falseServicio"
