--- a/app/src/main/res/layout/dialogo_citas_consulta_avanzada.xml
+++ b/app/src/main/res/layout/dialogo_citas_consulta_avanzada.xml
@@ -132,9 +132,9 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="12dp"
             android:layout_marginRight="12dp"
+            android:enabled="false"
             android:gravity="center_horizontal"
             android:text="Fecha Inicial"
-            android:enabled="false"
             android:textColor="@color/Blanco"
             android:textSize="14dp"
             android:textStyle="bold" />
@@ -225,6 +225,7 @@
             android:layout_marginRight="12dp"
             android:background="@drawable/boton"
             android:text="Consultar"
+            android:textColor="@color/Blanco"
             android:textSize="18sp" />
     </LinearLayout>
 
