--- a/app/src/main/res/layout/dialogo_configuracion.xml
+++ b/app/src/main/res/layout/dialogo_configuracion.xml
@@ -50,6 +50,55 @@
                 android:textSize="18sp" />
 
             <TextView
+                android:id="@+id/tituloNotificaciones"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:paddingLeft="10dp"
+                android:text="Notificaciones"
+                android:textColor="@color/Blanco"
+                android:textSize="24sp"
+                android:textStyle="bold" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="4dp"
+                android:layout_marginTop="5dp"
+                android:background="@color/FondoSecundario2" />
+
+            <Switch
+                android:id="@+id/servicioCitasCerca"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/FondoSecundario2"
+                android:paddingLeft="12dp"
+                android:paddingTop="2dp"
+                android:paddingRight="6dp"
+                android:paddingBottom="4dp"
+                android:text="Recordar Citas Cercanas"
+                android:textColor="@color/Blanco"
+                android:textSize="18sp" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="4dp"
+                android:layout_marginTop="5dp"
+                android:background="@color/FondoSecundario2" />
+
+            <Switch
+                android:id="@+id/servicioCitasDia"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/FondoSecundario2"
+                android:paddingLeft="12dp"
+                android:paddingTop="2dp"
+                android:paddingRight="6dp"
+                android:paddingBottom="4dp"
+                android:text="Recordar Citas Diarias"
+                android:textColor="@color/Blanco"
+                android:textSize="18sp" />
+
+            <TextView
                 android:id="@+id/tituloAyuda"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
